cluster/apps/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  labels:
    app.kubernetes.io/name: deluge
spec:
  type: ClusterIP
  ports:
    - port: 8112
      targetPort: 8112
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: deluge
