cluster/apps/deluge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deluge
  namespace: media
  annotations:
    gethomepage.dev/description: Deluge BitTorrent client
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-deluge
    gethomepage.dev/name: Deluge
    gethomepage.dev/pod-selector: app.kubernetes.io/name=deluge
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - deluge.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: deluge
          port: 8112
          weight: 1
